// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enhanceStyled handles amplifier of 0 1`] = `
.ixNkzK {
  background-color: #fff;
  float: initial;
  font-size: 12px;
}

<p
  className="sc-gzVnrw ixNkzK"
/>
`;

exports[`enhanceStyled handles amplifier of 1 1`] = `
.feubwF {
  background-color: #fff;
  float: initial;
  font-size: 12px;
}

<p
  className="sc-bZQynM feubwF"
/>
`;

exports[`enhanceStyled handles amplifier of 100 1`] = `


<p
  className="sc-htoDjs icXvAP"
/>
`;

exports[`enhanceStyled handles no amplifier 1`] = `
.gsSXuA {
  background-color: #fff;
  float: right;
  font-size: 12px;
}

<p
  className="sc-EHOje gsSXuA"
/>
`;

exports[`stronger handles 5 amplifier and no prop passed 1`] = `


<button
  className="sc-ifAKCX jtQzFX"
/>
`;

exports[`stronger handles 20 amplifier 1`] = `


<button
  className="sc-bxivhb hjHcYL"
/>
`;

exports[`stronger handles amplified once 1`] = `
.eSgojR {
  background-color: #fff;
  float: left;
  font-size: 12px;
}

<button
  className="sc-htpNat eSgojR"
/>
`;

exports[`stronger handles no amplifier 1`] = `
.gtlzod {
  background-color: #fff;
  float: ;
  font-size: 12px;
}

<button
  className="sc-bdVaJa gtlzod"
/>
`;

exports[`stronger handles string amplifier 1`] = `
.kCSSUt {
  background-color: #fff;
  float: ;
  font-size: 12px;
}

<button
  className="sc-bwzfXH kCSSUt"
/>
`;
